<<<<<<< HEAD
# Generated by Django 5.0.1 on 2024-11-21 05:51
=======
# Generated by Django 5.0.1 on 2024-11-25 06:46
>>>>>>> dec7ef4fe50c4a1034a9de3bdfcf3978531943eb

import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='PostInfo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('post', models.CharField(max_length=300, verbose_name='post')),
                ('post_date', models.DateTimeField(default=django.utils.timezone.now, max_length=12, verbose_name='post_date')),
                ('image', models.ImageField(blank=True, null=True, upload_to='img/post', verbose_name='画像')),
                ('video', models.FileField(blank=True, null=True, upload_to='video/post', verbose_name='動画')),
                ('account_id', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
